...
        android:id="@+id/nav_events_home"
        android:title="Home"/>
    <item
        android:id="@+id/nav_create_event"
        android:title="Create Event"/>
    <item
        android:id="@+id/nav_all_events"
        android:title="All Events"/>
    <item
        android:id="@+id/nav_profile"
        android:title="Profile"/>
    <item
        android:id="@+id/nav_my_waiting_lists"
        android:title="My Waiting Lists"/>

    <item
        android:id="@+id/nav_notifications"
        android:title="Notifications"/>
    <item
        android:id="@+id/nav_manage_profiles"
        android:title="Manage Profiles"/>
    <item
        android:id="@+id/nav_admin_notification_logs"
        android:title="Notification Logs"/>
    <item
        android:id="@+id/nav_lottery_description"
...
